Fix overflow issue

--- a/src/components/FAQ/FAQ.module.css
+++ b/src/components/FAQ/FAQ.module.css
@@ -37,10 +37,10 @@
     background-image: url("../../../public/Shapes/hex5.png");
     background-repeat: no-repeat;
     background-size: contain;
-    top: -0.5rem;
-    left: calc(50vw + 6.7rem);
-    height: 70px;
-    width: 70px;
+    top: -0.4rem;
+    left: calc(50vw + 7rem);
+    height: 60px;
+    width: 60px;
     z-index: -10;
     overflow-x: hidden;
     filter: drop-shadow(0px 0px 20px #92a7f0);
