--- a/src/components/Sponsors/Sponsors.module.css
+++ b/src/components/Sponsors/Sponsors.module.css
@@ -9,10 +9,10 @@
     background-image: url("../../../public/Shapes/shape3.png");
     background-repeat: no-repeat;
     background-size: contain;
-    top: -0.8rem;
-    left: calc(50vw - 10.5rem);
-    height: 70px;
-    width: 70px;
+    top: -0.5rem;
+    left: calc(50vw - 8.9rem);
+    height: 110px;
+    width: 110px;
     z-index: -10;
     filter: drop-shadow(0px 0px 15px #92a7f0);
     transform: rotate(49deg);
@@ -23,10 +23,10 @@
     background-image: url("../../../public/Shapes/hex1.png");
     background-repeat: no-repeat;
     background-size: contain;
-    top: -0.5rem;
-    left: calc(50vw + 6.7rem);
-    height: 70px;
-    width: 70px;
+    top: 2.1rem;
+    left: calc(50vw + 3.1rem);
+    height: 50px;
+    width: 50px;
     z-index: -10;
     overflow-x: hidden;
     filter: drop-shadow(0px 0px 20px #92a7f0);
@@ -122,7 +122,6 @@
     }
 }
 
-
 @media (min-width: 760px) {
     .shape1 {
         top: -0.5rem;
@@ -148,14 +147,12 @@
     }
 
     .shape2 {
-        top: 3.2rem;
-        left: calc(50vw + 4.8rem);
+        top: 3.5rem;
+        left: calc(50vw + 5.1rem);
         height: 70px;
         width: 70px;
     }
 }
-
-
 
 @media (min-width: 1350px) {
     .sponsorbox > img {
@@ -179,7 +176,7 @@
     }
 
     .shape2 {
-        top: 3.2rem;
-        left: calc(50vw + 4.3rem);
+        top: 3.5rem;
+        left: calc(50vw + 4.6rem);
     }
 }
